@startuml
skinparam classAttributeIconSize 0

package "access.core" {
  class SecureDocument {
    - secret : String
    ~ packageInfo : String
    # inheritedInfo : String
    + apiInfo : String
    - privateMessage()
    ~ packageMessage()
    # protectedMessage()
    + publicMessage()
  }
}

package "access.friends" {
  class FriendInspector
}

package "access.outsiders" {
  class AccessControlDemo
}

FriendInspector --|> SecureDocument
AccessControlDemo ..> SecureDocument
AccessControlDemo ..> FriendInspector
@enduml

